removed some images that causes error on reading the file

--- a/01_Python_Fundamentals,_Part_1_(Workbook).ipynb
+++ b/01_Python_Fundamentals,_Part_1_(Workbook).ipynb
@@ -4907,15 +4907,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Ad0hwq1De3rM"
-      },
-      "source": [
-        "![while_loop_2.jpg](attachment:while_loop_2.jpg)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "mb6ms2Tge3rM"
       },
       "source": [
@@ -4970,15 +4961,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6hq_gjese3rM"
-      },
-      "source": [
-        "![break_2.jpg](attachment:break_2.jpg)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "sg8BmGBne3rN"
       },
       "source": [
@@ -5026,15 +5008,6 @@
         "        break\n",
         "    print(line)\n",
         "print('Done!')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GCNLmJIKe3rN"
-      },
-      "source": [
-        "![continue_2.jpg](attachment:continue_2.jpg)"
       ]
     },
     {
@@ -5101,15 +5074,6 @@
         "for i in [5, 4, 3, 2, 1]:\n",
         "    print(i)\n",
         "print('Blastoff!')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aDiuPAZle3rN"
-      },
-      "source": [
-        "![for_loop_2.jpg](attachment:for_loop_2.jpg)"
       ]
     },
     {
@@ -5796,7 +5760,7 @@
         "        if (inputs[i] < smallest):\n",
         "          smallest = inputs[i]\n",
         "\n",
-        "      print(largest, smallest)\n",
+        "      print(\"Largest: \", largest, \"Smallest: \", smallest)\n",
         "      break\n",
         "\n",
         "    inputs.append(int(user))\n",
